--- a/config/database.yml
+++ b/config/database.yml
@@ -9,37 +9,25 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  adapter: postgresql
   database: ticketee_development
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  host: localhost
+  username: aaronmcleod
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
+  adapter: postgresql
   database: ticketee_test
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  host: localhost
+  username: aaronmcleod
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: ticketee_production
-  pool: 5
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  adapter: postgresql
+  database: ticketee
+  host: localhost
+  username: aaronmcleod
 
 cucumber:
   <<: *test
