--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: postgresql
+  adapter: postgresql # jdbcpostgresql
   database: ticketee_development
   host: localhost
   username: aaronmcleod
@@ -18,7 +18,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
-  adapter: postgresql
+  adapter: postgresql # jdbcpostgresql
   database: ticketee_test
   host: localhost
   username: aaronmcleod
